# isup_ai

./: .gitignore  README.md  app_rag.py  notebook_tuto_verbatims.ipynb  presentation_isup_17032026.pptx  pyproject.toml  requirements.txt  support presentation.pptx  tuto-clustering.ipynb
data/: verbatims_nps_C0.csv
