[project]
name = "isup-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy","requests","openai","docling","faster-whisper","pypdf", "streamlit", "pdf2image", "ruff", "pytesseract","scikit-learn","matplotlib","seaborn", "python-dotenv","sentence_transformers","huggingface-hub==0.34.0"]